--- a/OraChallenge/Base.lproj/Main.storyboard
+++ b/OraChallenge/Base.lproj/Main.storyboard
@@ -304,24 +304,56 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" textLabel="ulj-oQ-xzK" style="IBUITableViewCellStyleDefault" id="WG9-T1-u5P">
-                                        <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="100" id="WG9-T1-u5P" customClass="ORAChatsListViewCell">
+                                        <rect key="frame" x="0.0" y="92" width="600" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="WG9-T1-u5P" id="7hJ-OZ-HtE">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="99"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ulj-oQ-xzK">
-                                                    <rect key="frame" x="15" y="0.0" width="570" height="43"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tY5-2S-tdv">
+                                                    <rect key="frame" x="8" y="8" width="584" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fr8-VH-1x8">
+                                                    <rect key="frame" x="8" y="37" width="584" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z12-lY-sde">
+                                                    <rect key="frame" x="8" y="66" width="584" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="Z12-lY-sde" secondAttribute="trailing" constant="8" id="5OF-V3-LT1"/>
+                                                <constraint firstAttribute="trailing" secondItem="fr8-VH-1x8" secondAttribute="trailing" constant="8" id="C2m-Xb-YiF"/>
+                                                <constraint firstItem="tY5-2S-tdv" firstAttribute="leading" secondItem="7hJ-OZ-HtE" secondAttribute="leading" constant="8" id="D4A-Et-ApC"/>
+                                                <constraint firstItem="fr8-VH-1x8" firstAttribute="top" secondItem="tY5-2S-tdv" secondAttribute="bottom" constant="8" id="IgJ-6L-t8V"/>
+                                                <constraint firstItem="tY5-2S-tdv" firstAttribute="top" secondItem="7hJ-OZ-HtE" secondAttribute="top" constant="8" id="Jyu-V1-BmU"/>
+                                                <constraint firstItem="fr8-VH-1x8" firstAttribute="leading" secondItem="7hJ-OZ-HtE" secondAttribute="leading" constant="8" id="auC-JI-av9"/>
+                                                <constraint firstItem="Z12-lY-sde" firstAttribute="top" secondItem="fr8-VH-1x8" secondAttribute="bottom" constant="8" id="eyr-PH-nKc"/>
+                                                <constraint firstAttribute="trailing" secondItem="tY5-2S-tdv" secondAttribute="trailing" constant="8" id="jFl-dN-U1l"/>
+                                                <constraint firstItem="Z12-lY-sde" firstAttribute="leading" secondItem="7hJ-OZ-HtE" secondAttribute="leading" constant="8" id="sZI-Qb-UgU"/>
+                                                <constraint firstAttribute="bottom" secondItem="Z12-lY-sde" secondAttribute="bottom" constant="12" id="xa6-Bl-Jjy"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="chatOwnerLabel" destination="tY5-2S-tdv" id="H6W-iK-3mA"/>
+                                            <outlet property="latestMsgOwnerLabel" destination="fr8-VH-1x8" id="dUf-al-Z27"/>
+                                            <outlet property="messageLabel" destination="Z12-lY-sde" id="gVU-HH-mgk"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="uMF-Qd-F3s" id="Y3h-j9-JVe"/>
+                                    <outlet property="delegate" destination="uMF-Qd-F3s" id="tXX-jI-xup"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
